# iFakeGPS

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  ifakegps.py  ifakegps.py.bak  pack.bat  pack.py  pyproject.toml  requirements.txt  run.bat  run.py  start_tunneld.bat
docs/: README_ZHTW.md  USER_MANUAL_ZH.md
src/: main.py
src/core/: device_manager.py  models.py  route_walker.py  tunnel_manager.py
src/ui/: app.py  caching_map_view.py  i18n.py  tooltip.py
src/utils/: logger.py
