[project]
name = "ifakegps"
version = "1.0.0"
description = "A powerful GUI application for simulating GPS location on iOS devices (iOS 17+)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "iFakeGPS Contributors" }
]
keywords = ["ios", "gps", "location", "simulator", "pymobiledevice3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

dependencies = [
    "pymobiledevice3>=4.0.0",
    "tkintermapview>=1.29",
    "customtkinter>=5.2.0",
    "gpxpy>=1.6.2",
    "requests>=2.28.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
]
dev = [
    "pyinstaller>=6.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.scripts]
ifakegps = "ifakegps:main"

[project.urls]
Homepage = "https://github.com/user/ifakegps"
Documentation = "https://github.com/user/ifakegps/blob/main/docs/README_EN.md"
Repository = "https://github.com/user/ifakegps"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.hatch.build.targets.wheel]
packages = ["."]
